# derivenum

./: Cargo.toml  README.md
src/: enum_match.rs  enum_take.rs  lib.rs
tests/: integration_tests.rs
